--- a/inted.html
+++ b/inted.html
@@ -4,4 +4,5 @@
     </title>
     <h1> Welcome to my website</h1>
     <p> Hello all, welcome to this website :)</p>
+    <p> I hope you will enjoy this website!</p>
     </html>
